displayed all photos

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>InstaClone</title>
 
     <link rel="stylesheet" href="stylesheet/index.css">
-    
+    <link rel="images" href="/images/">
 </head>
 <body>
-    <h1>InstaClone</h1>
+    <h1>CloudPrn</h1>
     <!-- 
         I need to generate a thumbnail-item div
         and an img element for every image URL
