add modal with hidden

--- a/index.html
+++ b/index.html
@@ -55,15 +55,17 @@
         </div>          -->
 
     </div>
-    <div class="picture-frame">
-        <!-- 
-            This is my "output" for when
-            the user clicks a thumbnail.
-            I will modify the src attribute
-            and set it to the same src
-            as the thunbnail that got clicked. 
-        -->
-        <img data-output src="" alt="">
+    <div class="modal modal-hidden">
+        <div class="picture-frame">
+            <!-- 
+                This is my "output" for when
+                the user clicks a thumbnail.
+                I will modify the src attribute
+                and set it to the same src
+                as the thunbnail that got clicked. 
+            -->
+            <img data-output src="images/stormy-clouds.jpg" alt="">
+        </div>
     </div>
     <script src="scripts/index.js"></script>
 
