--- a/index.html
+++ b/index.html
@@ -8,51 +8,50 @@
 
     <link rel="stylesheet" href="stylesheet/index.css">
     <link rel="images" href="/images/">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 <body>
-    <h1>CloudPrn</h1>
-    <!-- 
-        I need to generate a thumbnail-item div
-        and an img element for every image URL
-        in my images array. 
+    <!--  Navbar Logo -->
+    <nav class="ig-navbar nav">
+        <div class="ig-logo nav">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+                <div class="split"></div>
+            <h1 class="logo-text">InstaClone</h1>
+        </div>
+        <div class="features nav">
+            <a href="#"><i class="far fa-compass"></i></a>
 
-        I will append each of those thumbnail-item divs 
-        to the thunbnail-contaimner.
+            <a href="#"><i class="far fa-heart"></i></a>
+
+            <a href="#"><i class="far fa-user"></i></a>
+        </div>
+    </nav>
+
+    <!-- User Profile -->
+
+
+
+
+
+
+
+
+
+    <!-- Image Feed -->
+
+    <!-- 
+        I need to generate a thumbnail-item div and an img element for every image URL in my images array. 
+
+        I will append each of those thumbnail-item divs to the thunbnail-contaimner.
     -->
     <div class="thumbnail-container" data-container>
-        <!-- <div class="thumbnail-item">
+        <!-- 
+        <div class="thumbnail-item">
             <img src="images/clear-sky.jpg" alt="">
         </div>
         <div class="thumbnail-item">
             <img src="images/in-the-clouds.jpg" alt="">
-        </div>
-        <div class="thumbnail-item">
-            <img src="images/lightning-clouds.jpg" alt="">
-        </div>
-        <div class="thumbnail-item">
-            <img src="images/clear-sky2.jpg" alt="">
-        </div>
-        <div class="thumbnail-item">
-            <img src="images/in-the-sky.jpg" alt="">
-        </div>
-        <div class="thumbnail-item">
-            <img src="images/ocean-sunset.jpg" alt="">
-        </div>
-        <div class="thumbnail-item">
-            <img src="images/moutain-view-clouds.jpg" alt="">
-        </div>
-        <div class="thumbnail-item">
-            <img src="images/over-cloud-sunset.jpg" alt="">
-        </div>
-        <div class="thumbnail-item">
-            <img src="images/stormy-clouds2.jpg" alt="">
-        </div>
-        <div class="thumbnail-item">
-            <img src="images/pink-clouds.jpg" alt="">
-        </div>
-        <div class="thumbnail-item">
-            <img src="images/stormy-clouds.jpg" alt=""> 
-        </div>          -->
+        </div> -->
 
     </div>
     <div class="modal modal-hidden" data-modal> 
